--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/avantages/exonerations_temporaires.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/avantages/exonerations_temporaires.yaml
@@ -1124,6 +1124,6 @@
 # ###     APPLICATION EXONERATION PERMANENTE     ###
 # ##################################################
 
-# eligible_exoneration_temporaire
-# exoneration_temporaire_appliquee
-# montant_exoneration_temporaire
+# TODO eligible_exoneration_temporaire
+# TODO exoneration_temporaire_appliquee
+# TODO montant_exoneration_temporaire
