--- a/openfisca_pf/parameters/dicp/impot_societe/taux/activite_exoneration_is.yaml
+++ b/openfisca_pf/parameters/dicp/impot_societe/taux/activite_exoneration_is.yaml
@@ -10,55 +10,67 @@ SOCIETES_GESTION_FONDS_GARANTIE:
     amount_unit: /1
   brackets:
     - amount:
-        2022-01-01: 0.90
+        2017-01-01: 0.90
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 1
     - amount:
-        2022-01-01: 0.80
+        2017-01-01: 0.80
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 2
     - amount:
-        2022-01-01: 0.70
+        2017-01-01: 0.70
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 3
     - amount:
-        2022-01-01: 0.60
+        2017-01-01: 0.60
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 4
     - amount:
-        2022-01-01: 0.50
+        2017-01-01: 0.50
       threshold:
-        2020-12-31:
+        2017-12-31:
           value: 5
     - amount:
-        2022-01-01: 0.40
+        2017-01-01: 0.40
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 6
     - amount:
-        2022-01-01: 0.30
+        2017-01-01: 0.30
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 7
     - amount:
-        2022-01-01: 0.20
+        2017-01-01: 0.20
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 8
     - amount:
-        2022-01-01: 0.10
+        2017-01-01: 0.10
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 9
     - amount:
-        2022-01-01: 0.0
+        2017-01-01: 0.0
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 10
+
+ACTIVITES_CROISIERE:
+  description: Exoneration pour les activités de croisière
+  metadata:
+    type: single_amount
+    amount_unit: /1
+  brackets:
+    - amount:
+        2017-01-01: 1
+      threshold:
+        2017-01-01:
+          value: 0
 
 CONCESSIONS_MINIERES:
   description: Exoneration pour les concessions minières
@@ -68,22 +80,16 @@ CONCESSIONS_MINIERES:
     amount_unit: /1
   brackets:
     - amount:
+        2017-01-01: 0
         2020-12-31: 1
       threshold:
-        2020-12-31:
+        2017-12-31:
           value: 0
-
-HOTEL_RESIDENCE_INTERNATIONAL:
-  description: Exoneration pour les concessions minières
-  metadata:
-    type: single_amount
-    amount_unit: /1
-  brackets:
     - amount:
-        2020-12-31: 1
+        2017-12-31: 0
       threshold:
-        2020-12-31:
-          value: 0
+        2017-12-31:
+          value: 11
 
 MEMBRE_GROUPE_FISCAL:
   description: Exoneration pour les membres d'un groupe fiscal
@@ -93,9 +99,9 @@ MEMBRE_GROUPE_FISCAL:
     amount_unit: /1
   brackets:
     - amount:
-        2020-12-31: 1
+        2022-12-31: 1
       threshold:
-        2020-12-31:
+        2022-12-31:
           value: 0
 
 GIE:
@@ -106,9 +112,9 @@ GIE:
     amount_unit: /1
   brackets:
     - amount:
-        2020-12-31: 1
+        2017-01-01: 1
       threshold:
-        2020-12-31:
+        2017-01-01:
           value: 0
 
 SCPR:
@@ -119,9 +125,9 @@ SCPR:
     amount_unit: /1
   brackets:
     - amount:
-        2020-12-31: 1
+        2017-01-01: 1
       threshold:
-        2020-12-31:
+        2017-01-01:
           value: 0
 
 SCM:
@@ -132,21 +138,21 @@ SCM:
     amount_unit: /1
   brackets:
     - amount:
-        2020-12-31: 1
+        2017-01-01: 1
       threshold:
-        2020-12-31:
+        2017-01-01:
           value: 0
 
 OBNL:
-  description: Taux de la CST-NS pour les ventes
+  description: Exoneration pour OBNL (Organisme à but non lucratif)
   metadata:
     type: single_amount
     threshold_unit: exercice
     amount_unit: /1
   brackets:
     - amount:
-        2020-01-01:
+        2017-01-01:
           value: 1
       threshold:
-        2020-01-01:
+        2017-01-01:
           value: 0
