tests crédits d'impôts

--- a/openfisca_pf/tests/dicp/impot_foncier/unitaires/avantages/credits.yaml
+++ b/openfisca_pf/tests/dicp/impot_foncier/unitaires/avantages/credits.yaml
@@ -1,3 +1,21 @@
+# age_installation_photovoltaique
+
+- name: "age_installation_photovoltaique est bien calculé"
+  input:
+    date_de_mise_en_service_installation_photovoltaique:
+      2020: 2020-02-02
+  output:
+    age_installation_photovoltaique:
+      2020: 0
+      2021: 1
+      2022: 2
+      2023: 3
+      2024: 4
+
+
+
+
+# date_limite_de_mise_en_service_installation_photovoltaique_pays
 
 - name: "date_limite_de_mise_en_service_installation_photovoltaique_pays est égale à 1970-01-01 avant 2023"
   period: 2022
@@ -11,6 +29,8 @@
 
 
 
+
+# date_limite_de_mise_en_service_installation_photovoltaique
 
 - name: "date_limite_de_mise_en_service_installation_photovoltaique est égale à 1970-01-01 avant 2023"
   period: 2022
@@ -28,6 +48,8 @@
 
 
 
+
+# eligible_credit_photovoltaique
 
 - name: "eligible_credit_photovoltaique est égale à false avant 2023"
   period: 2022
@@ -82,6 +104,8 @@
 
 
 
+# maximum_credit_photovoltaique_pays
+
 - name: "maximum_credit_photovoltaique_pays est égale à 0 avant 2023"
   period: 2022
   output:
@@ -94,6 +118,8 @@
 
 
 
+
+# maximum_credit_photovoltaique_pays
 
 - name: "maximum_credit_photovoltaique est égale à 0 avant 2023"
   period: 2022
@@ -112,6 +138,8 @@
 
 
 
+# taux_credit_photovoltaique_pays
+
 - name: "taux_credit_photovoltaique_pays est égale à 0 avant 2023"
   period: 2022
   output:
@@ -124,6 +152,8 @@
 
 
 
+
+# taux_credit_photovoltaique
 
 - name: "taux_credit_photovoltaique est égale à 0 avant 2023"
   period: 2022
@@ -141,6 +171,8 @@
 
 
 
+
+# montant_base_credit_photovoltaique
 
 - name: "montant_base_credit_photovoltaique est égale à 0 avant 2023"
   period: 2022
@@ -184,42 +216,161 @@
 
 
 
+# enveloppe_credit_photovoltaique
+
 - name: "enveloppe_credit_photovoltaique est égale à 0 avant 2023"
   input:
+    date_de_mise_en_service_installation_photovoltaique:
+      2020: 2020-01-01
+    montant_base_credit_photovoltaique:
+      2020: 200
+      2021: 200
+      2022: 200
     reste_credit_photovoltaique:
-      2021: 100
+      2020: 0
+      2021: 0
+      2022: 100
     eligible_credit_photovoltaique:
+      2020: true
+      2021: true
       2022: true
   output:
+    age_installation_photovoltaique:
+      2020: 0
+      2021: 1
+      2022: 2
     enveloppe_credit_photovoltaique:
+      2020: 0
+      2021: 0
       2022: 0
 
-- name: "enveloppe_credit_photovoltaique est égale à reste_credit_photovoltaique de l'année passée si le bien est toujours éligible à partir de 2023"
+- name: "enveloppe_credit_photovoltaique est égale à montant_base_credit_photovoltaique la première année d'imputation et reste_credit_photovoltaique la suivante"
   input:
+    date_de_mise_en_service_installation_photovoltaique:
+      2023: 2023-01-01
+    montant_base_credit_photovoltaique:
+      2023: 200
+      2024: 200
+      2025: 200
+      2026: 200
     reste_credit_photovoltaique:
-      2023: 100
-    eligible_credit_photovoltaique:
-      2024: true
-  output:
-    enveloppe_credit_photovoltaique:
+      2023: 0
       2024: 100
-
-- name: "enveloppe_credit_photovoltaique est égale à 0 si le bien n'est plus éligible à partir de 2023"
-  input:
-    reste_credit_photovoltaique:
-      2023: 100
+      2025: 0
+      2026: 0
     eligible_credit_photovoltaique:
-      2024: false
+      2023: true
+      2024: true
+      2025: true
+      2026: true
   output:
+    age_installation_photovoltaique:
+      2023: 0
+      2024: 1
+      2025: 2
+      2026: 3
     enveloppe_credit_photovoltaique:
-      2024: 0
+      2023: 0
+      2024: 200
+      2025: 100
+      2026: 0
 
 
+
+
+# credit_photovoltaique_applique
+
+- name: "credit_photovoltaique_applique est false avant 2023"
+  period: 2022
+  input:
+    exoneration_permanente_appliquee: false
+    exoneration_temporaire_appliquee: false
+    eligible_credit_photovoltaique: true
+  output:
+    credit_photovoltaique_applique: false
+
+- name: "credit_photovoltaique_applique est true si les conditions sont réunies"
+  period: 2023
+  input:
+    exoneration_permanente_appliquee: false
+    exoneration_temporaire_appliquee: false
+    eligible_credit_photovoltaique: true
+  output:
+    credit_photovoltaique_applique: true
+
+- name: "credit_photovoltaique_applique est false si les conditions ne sont pas réunies (exonération permanente)"
+  period: 2023
+  input:
+    exoneration_permanente_appliquee: true
+    exoneration_temporaire_appliquee: false
+    eligible_credit_photovoltaique: true
+  output:
+    credit_photovoltaique_applique: false
+
+- name: "credit_photovoltaique_applique est false si les conditions ne sont pas réunies (exonération temporaire)"
+  period: 2023
+  input:
+    exoneration_permanente_appliquee: false
+    exoneration_temporaire_appliquee: true
+    eligible_credit_photovoltaique: true
+  output:
+    credit_photovoltaique_applique: false
+
+- name: "credit_photovoltaique_applique est false si les conditions ne sont pas réunies pas éligible)"
+  period: 2023
+  input:
+    exoneration_permanente_appliquee: false
+    exoneration_temporaire_appliquee: false
+    eligible_credit_photovoltaique: false
+  output:
+    credit_photovoltaique_applique: false
+
+
+
+
+# credit_photovoltaique_eligible_et_applique
+
+- name: "credit_photovoltaique_eligible_et_applique est égale à false avant 2023"
+  period: 2022
+  input:
+    eligible_credit_photovoltaique: true
+    credit_photovoltaique_applique: true
+  output:
+    credit_photovoltaique_eligible_et_applique: false
+
+- name: "credit_photovoltaique_eligible_et_applique est égale à true si les conditions sont réunies"
+  period: 2023
+  input:
+    eligible_credit_photovoltaique: true
+    credit_photovoltaique_applique: true
+  output:
+    credit_photovoltaique_eligible_et_applique: true
+
+- name: "credit_photovoltaique_eligible_et_applique est égale à true si les conditions ne sont pas réunies (pas eligible)"
+  period: 2023
+  input:
+    eligible_credit_photovoltaique: false
+    credit_photovoltaique_applique: true
+  output:
+    credit_photovoltaique_eligible_et_applique: false
+
+- name: "credit_photovoltaique_eligible_et_applique est égale à true si les conditions ne sont pas réunies (pas appliqué)"
+  period: 2023
+  input:
+    eligible_credit_photovoltaique: true
+    credit_photovoltaique_applique: false
+  output:
+    credit_photovoltaique_eligible_et_applique: false
+
+
+
+
+# montant_credit_photovoltaique
 
 - name: "montant_credit_photovoltaique est égale à 0 avant 2023"
   period: 2022
   input:
-    eligible_credit_photovoltaique: true
+    credit_photovoltaique_eligible_et_applique: true
     impot_foncier_part_pays_brute: 1000
     enveloppe_credit_photovoltaique: 100
   output:
@@ -228,7 +379,7 @@
 - name: "montant_credit_photovoltaique est égale à enveloppe_credit_photovoltaique si enveloppe_credit_photovoltaique est inférieur à impot_foncier_part_pays_brute"
   period: 2023
   input:
-    eligible_credit_photovoltaique: true
+    credit_photovoltaique_eligible_et_applique: true
     impot_foncier_part_pays_brute: 1000
     enveloppe_credit_photovoltaique: 100
   output:
@@ -237,16 +388,16 @@
 - name: "montant_credit_photovoltaique est égale à impot_foncier_part_pays_brute si enveloppe_credit_photovoltaique est supérieur à impot_foncier_part_pays_brute"
   period: 2023
   input:
-    eligible_credit_photovoltaique: true
+    credit_photovoltaique_eligible_et_applique: true
     impot_foncier_part_pays_brute: 200
     enveloppe_credit_photovoltaique: 2000
   output:
     montant_credit_photovoltaique: 200
 
-- name: "montant_credit_photovoltaique est égale à 0 si le bien n'est pas eligible"
+- name: "montant_credit_photovoltaique est égale à 0 si le bien n'est pas eligible ou que le crédit ne s'applique pas"
   period: 2023
   input:
-    eligible_credit_photovoltaique: false
+    credit_photovoltaique_eligible_et_applique: false
     impot_foncier_part_pays_brute: 300
     enveloppe_credit_photovoltaique: 3000
   output:
@@ -254,6 +405,8 @@
 
 
 
+
+# reste_credit_photovoltaique
 
 - name: "reste_credit_photovoltaique est égale à 0 avant 2023"
   period: 2022
@@ -270,3 +423,40 @@
     montant_credit_photovoltaique: 100
   output:
     reste_credit_photovoltaique: 900
+
+
+
+
+# duree_credit_photovoltaique
+
+- name: "duree_credit_photovoltaique est égale à 0 avant 2023"
+  period: 2022
+  input:
+    impot_foncier_part_pays_brute: 100
+    montant_base_credit_photovoltaique: 50
+  output:
+    duree_credit_photovoltaique: 0
+
+- name: "duree_credit_photovoltaique est égale à 0 à partir de 2023 si le montant de base du crédit est 0"
+  period: 2023
+  input:
+    impot_foncier_part_pays_brute: 100
+    montant_base_credit_photovoltaique: 0
+  output:
+    duree_credit_photovoltaique: 0
+
+- name: "duree_credit_photovoltaique est calculé à partir de 2023 (base multiple de l'impôt)"
+  period: 2023
+  input:
+    impot_foncier_part_pays_brute: 100
+    montant_base_credit_photovoltaique: 50
+  output:
+    duree_credit_photovoltaique: 2
+
+- name: "duree_credit_photovoltaique est calculé à partir de 2023 (base non multiple de l'impôt)"
+  period: 2023
+  input:
+    impot_foncier_part_pays_brute: 100
+    montant_base_credit_photovoltaique: 33
+  output:
+    duree_credit_photovoltaique: 4
